# MindForge-

./: .gitattributes  .gitignore  README.md
Documentation/: MindForge Documentation 2.docx  MindForge Documentation.docx
app/: CMakeLists.txt  MindForge.sln
app/ConsoleApplication1/: ConsoleApplication1.vcxproj  main.cpp  pch.h
app/ConsoleApplication1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  MindForge.exe.recipe  MindForge.ilk  vc143.idb
app/ConsoleApplication1/x64/Debug/ConsoleA.7b9ac0af.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
app/ConsoleApplication1/x64/Debug/MindForge.tlog/: CL.command.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
app/include/: accounts.h  data.h  db.h  logic.h  pch.h  presentation.h
app/include/screens/: all_tasks.h  archive.h  calendar.h  dashboard.h  login.h  profile.h  settings.h  statistics.h  tasks.h
app/src/: accounts.cpp  allTasks.cpp  archive.cpp  calendar.cpp  dashboard.cpp  data.cpp  db.cpp  logic.cpp  login.cpp  main.cpp  presentation.cpp  profile.cpp  statistics.cpp  tasks.cpp
